# pandoc_styles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.py
pandoc_styles/: __init__.py  cl_make_styles_local.py  cl_stylepacks.py  cl_tools.py  config.yaml  constants.py  filter.py  flight_scripts.py  format_mappings.py  main - Kopie.py  main.py  make_styles_local.py  pandoc_cmd_line_options.py  styles.yaml  utils.py
pandoc_styles/config_dir/: config.yaml  styles.yaml
pandoc_styles/config_dir/css/: default.css
pandoc_styles/config_dir/filter/: alignment.py  custom_styles.py  default_code_language.py  divs.py  epigraph.py  include.py  new_page.py  noindent.py  numbered_code.py  poem.py  quote.py
pandoc_styles/config_dir/misc/: mono.theme
pandoc_styles/config_dir/postflight/: delete_output.py  run_external_app.py
pandoc_styles/config_dir/preflight/: append_to_file.py  appendices.py  copyrights.py  dedication.py  run_external_app.py  scenes.py
pandoc_styles/config_dir/sass/: default.scss  default_epub.scss  extra_styles.scss  navigation.scss  poem.scss  quote.scss  scenes.scss
pandoc_styles/config_dir/template/: novel.tex  scrlttr2.tex
tests/: fixtures.py  test_app.py  test_filter.py  test_pandoc_styles.py  test_style_to_cfg.py
tests/data/: no_metadata.md  styles.yaml  test01.md  test01_only_yaml.yaml  test02.md
