[tool.poetry]
name = "pandoc_styles"
version = "0.9.17"
description = "A script to convert files with pandoc using styles."
authors = ["dickloraine <dickloraine@gmx.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dickloraine/pandoc_styles"
keywords = ["pandoc", "writing", "text", "conversion"]
classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3.6',
    'Operating System :: OS Independent',
    'Natural Language :: English',
    'Intended Audience :: End Users/Desktop',
    'Topic :: Text Processing',
    'License :: OSI Approved :: MIT License',
]

[tool.poetry.dependencies]
python = "^3.8"
libsass = "^0.22.0"
panflute = "^2.3.0"
setuptools = "^70.0"
"ruamel.yaml" = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pre-commit = "^1.12.0"
ruff = "^0.1.3"

[tool.poetry.scripts]
pandoc_styles = "pandoc_styles.main:main"
pandoc_styles_tools = "pandoc_styles.cl_tools:main"
pandoc-styles = "pandoc_styles.main:main"
pandoc-styles-tools = "pandoc_styles.cl_tools:main"

[build-system]
requires = ["poetry>=0.12", "setuptools>=70.0"]
build-backend = "poetry.masonry.api"
